products/legal/templates/v1/shipping-delivery.tmpl.md
{{#clause id=DELIVERY.NATURE}}
## What we deliver, and how

**This is a software service. Nothing is shipped to you physically.** There is no parcel, no courier, no tracking number and no delivery address to give us.

We are publishing this page because a delivery policy is asked for regardless of whether what you buy arrives in a box, and because you are entitled to know when what you paid for becomes available.
{{/clause}}

{{#clause id=DELIVERY.WHEN}}
## When you get access

Access is granted electronically to the account you signed up with.

**Within {{ facts.delivery.access_within_hours }} hour(s) of a successful payment**, in the ordinary case immediately. You do not have to wait for anyone to approve anything by hand.

If access has not appeared after that, it is a fault and not a queue: write to {{ facts.support.email }} and we will fix it or refund you.
{{/clause}}

{{#clause id=DELIVERY.WHERE}}
## Where it is delivered

To {{ facts.site_url }}, and to the email address on your account.

There is no geographic restriction on access from our side. If your own network or jurisdiction blocks the service, that is outside what we can deliver, and you are entitled to a refund under the [Cancellation and Refunds page]({{ facts.routes.refund-cancellation }}) if it means you cannot use what you paid for.
{{/clause}}

{{#clause id=DELIVERY.FAILURE}}
## If delivery fails

If we cannot give you access, you have not been delivered to, whatever the payment record says.

Write to {{ facts.support.email }}. We will either restore access or refund you in full, and we will not treat a failed delivery as a used period.
{{/clause}}

{{#clause id=DELIVERY.CONTACT}}
## Who to ask

{{ facts.support.email }}, or call {{ facts.support.phone }}.

We reply within {{ window.ack_hours }} hours.
{{/clause}}
